-(add) player object

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="models/vector.js"></script>
     <script src="models/static-object.js"></script>
     <script src="models/moving-object.js"></script>
+    <script src="models/player-object.js"></script>
 
 
     <!-- Every script file must be above main.js. -->
