-(add) ui element (logger)

--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
     </div>
 
     <!-- Script order is must be sorted by dependency -->
+    <!-- Base scripts -->
     <script src="scripts/helper/vector.js"></script>
     <script src="scripts/helper/bounding-rectangle.js"></script>
 
+    <!-- UI scripts -->
+    <script src="scripts/models/ui/ui-log-panel.js"></script>
+
+    <!-- Models -->
     <script src="scripts/models/static-object.js"></script>
     <script src="scripts/models/moving-object.js"></script>
     <script src="scripts/models/player-object.js"></script>
@@ -25,7 +30,7 @@
     <script>
         initWorld();
 
-        setInterval(() => { actionsInEveryFrame() }, 10);
+        setInterval(() => { actionsInEveryFrame() }, 100);
     </script>
 </body>
 
