--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <html>
 
 <head>
+    <!-- styles -->
     <link rel="stylesheet" type="text/css" href="styles/main.css">
     <link rel="stylesheet" type="text/css" href="styles/game-ui-interface.css">
+
+    <!-- sounds -->
+    <audio id="mariod-die-sound-effect">
+        <source src="sound/effects/mario_die.wav" type="audio/wav">
+    </audio>
+
 </head>
 
 <body>
@@ -11,6 +18,9 @@
     </div>
 
     <!-- Script order is must be sorted by dependency -->
+    <!-- Events -->
+    <script src="scripts/events/events.js"></script>
+
     <!-- Base scripts -->
     <script src="scripts/helper/vector.js"></script>
     <script src="scripts/helper/bounding-rectangle.js"></script>
