--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <script src="scripts/models/static-object.js"></script>
     <script src="scripts/models/moving-object.js"></script>
     <script src="scripts/models/player-object.js"></script>
+    <script src="scripts/models/base-enemy-object.js"></script>
 
 
     <!-- Every script file must be above main.js. -->
